OD-341 Renames dec/seach endpoint
Renamed to display/search to avoid the use of an out of context acronym
Added end point to swagger docs
